--- a/app/templates/accounting/accounts/form.html
+++ b/app/templates/accounting/accounts/form.html
@@ -23,8 +23,28 @@
                         </div>
 
                         <div class="mb-3">
-                            {{ form.category.label(class="form-label") }}
-                            {{ form.category(class="form-select") }}
+                            {{ form.account_type.label(class="form-label") }}
+                            {{ form.account_type(class="form-select") }}
+                        </div>
+
+                        <div class="mb-3">
+                            {{ form.account_nature.label(class="form-label") }}
+                            {{ form.account_nature(class="form-select") }}
+                        </div>
+
+                        <div class="mb-3">
+                            {{ form.parent_id.label(class="form-label") }}
+                            {{ form.parent_id(class="form-select") }}
+                        </div>
+
+                        <div class="mb-3">
+                            {{ form.description.label(class="form-label") }}
+                            {{ form.description(class="form-control", rows="3") }}
+                        </div>
+
+                        <div class="form-check mb-3">
+                            {{ form.is_detail(class="form-check-input") }}
+                            {{ form.is_detail.label(class="form-check-label") }}
                         </div>
 
                         <div class="form-check mb-3">
