--- a/app/templates/accounting/journals/form.html
+++ b/app/templates/accounting/journals/form.html
@@ -23,8 +23,33 @@
                         </div>
 
                         <div class="mb-3">
-                            {{ form.type.label(class="form-label") }}
-                            {{ form.type(class="form-select") }}
+                            {{ form.journal_type.label(class="form-label") }}
+                            {{ form.journal_type(class="form-select") }}
+                        </div>
+
+                        <div class="mb-3">
+                            {{ form.description.label(class="form-label") }}
+                            {{ form.description(class="form-control", rows="3") }}
+                        </div>
+
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="mb-3">
+                                    {{ form.default_debit_account_id.label(class="form-label") }}
+                                    {{ form.default_debit_account_id(class="form-select") }}
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="mb-3">
+                                    {{ form.default_credit_account_id.label(class="form-label") }}
+                                    {{ form.default_credit_account_id(class="form-select") }}
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-check mb-3">
+                            {{ form.is_active(class="form-check-input") }}
+                            {{ form.is_active.label(class="form-check-label") }}
                         </div>
 
                         <div class="d-flex justify-content-end">
